<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNotesListRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tvNoteCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_item_category" />

        <TextView
            android:id="@+id/tvNoteSubcategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_item_subcategory" />

        <TextView
            android:id="@+id/tvNoteKeywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:text="@string/note_item_keywords" />

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/note_item_note" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>