<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/titleTxt"
        android:textSize="60sp"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btnNotes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnNotesTxt"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:layout_marginTop="96dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <Button
        android:id="@+id/btnCategories"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCategoriesTxt"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/btnNotes"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAboutTxt"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/btnCategories"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>